--- a/styles/sidenavStyle.css
+++ b/styles/sidenavStyle.css
@@ -5,7 +5,7 @@
     z-index: 12;
     top: 0;
     right: 0;
-    background-color: var(--bg_purple);
+    background-color: var(--vdark_purple);
     box-shadow: -5px 0px 15px rgba(0, 0, 0, 0.061);
     overflow-x: hidden;
     padding-top: 60px;
