--- a/styles/blogStyle.css
+++ b/styles/blogStyle.css
@@ -25,13 +25,16 @@
 body, html, #__next {
     margin: 0;
     overflow-x: hidden;
-    background-color: var(--bg_purple);
     color: white;
     min-height: 100vh;
+    background: rgb(31,20,41);
+    background: -moz-linear-gradient(193deg, rgba(31,20,41,1) 0%, rgba(0,0,0,1) 100%);
+    background: -webkit-linear-gradient(193deg, rgba(31,20,41,1) 0%, rgba(0,0,0,1) 100%);
+    background: linear-gradient(193deg, rgba(31,20,41,1) 0%, rgba(0,0,0,1) 150%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1f1429",endColorstr="#000000",GradientType=1);
 }
 
 header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.366), rgba(0, 0, 0, 0));
     color: white;
     position: absolute;
     top: 0;
@@ -55,15 +58,17 @@ header h1 {
 }
 
 #colorOverlay {
-    background-color: rgba(0, 0, 0, 0.499);
+    background-color: rgba(0, 0, 0, 0.17);
+    backdrop-filter: blur(1px);
     display: none;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 6;
     transition: all .25s;
+    cursor: pointer;
 }
 
 .pointer {
@@ -77,12 +82,39 @@ header h1 {
 
 .smallHeader {
     font-size: 18pt;
-    color: var(--realDark);
+    color: var(--lightestOrange);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 100;
+    background-color: transparent;
 }
 
 .lightestOrange {
+    color: var(--lightestOrange);
+}
+
+h1, h2, h3, h4, h5, h6, p, li {
+    font-family: "Roboto", sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 500;
+}
+
+#content_wrapper h1, h2 {
+    background-color: var(--lightYellow);
+    color: black;
+    padding: .5rem;
+    border-radius: 3px;
+    user-select: none;
+}
+
+a {
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+}
+
+a:hover {
     color: var(--lightestOrange);
 }
 
@@ -90,7 +122,6 @@ header h1 {
 /* SPOTLIGHT
 */
 #spotlight {
-    background-color: var(--lightestOrange);
     width: 100%;
     height: 33rem;
     display: flex;
@@ -119,10 +150,12 @@ header h1 {
 /* latest */
 #latest, #latest_articles {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     height: fit-content;
     width: 100%;
+    margin-bottom: 2rem;
 }
 
 #latest_articles {
@@ -145,12 +178,33 @@ header h1 {
 
 #articleView .article_image {
     width: 100%;
-    height: 20rem;
+    height: 25rem;
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 0 0 11px 11px;
+    opacity: 0.45;
 }
 
-#articleView #navbarOpener {
-    margin-top: 3rem;
+
+
+/* sanity styles */
+
+.code {
+    font-family: "monospace";
+}
+
+.em {
+    font-style: italic;
+}
+
+.strong {
+    font-weight: bold;
+}
+
+.underline {
+    text-decoration: underline;
+}
+
+.strike-through {
+    text-decoration: line-through;
 }
