--- a/styles/buttonStyle.css
+++ b/styles/buttonStyle.css
@@ -16,19 +16,22 @@
 }
 
 .btn_primary{
-    background-color: var(--lightestOrange);
+    background-color: white;
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.288);
     color: var(--realDark);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     transition: all .25s;
+    border: 2px solid transparent;
 }
 
 .btn_primary:hover {
-    background-color: var(--nice_purple);
-    box-shadow: 0 0 15px var(--nice_purple);
+    background: transparent;
+    color: white;
+    border : 2px solid white;
 }
 
 .disabled {
-    background-color: var(--vdark_purple);
+    background-color: rgba(255, 255, 255, 0.025);
     color: var(--textGrey);
     box-shadow: none;
 }
