--- a/styles/cardStyle.css
+++ b/styles/cardStyle.css
@@ -8,8 +8,8 @@
     height: 20rem;
     color: white;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-    border-radius: 33px;
-    background-image: linear-gradient( #000000ce, 50%, rgba(0, 0, 0, 0.249)),
+    border-radius: 22px;
+    background-image: linear-gradient( #000000ce, 100%, rgba(0, 0, 0, 1.249)),
     url('https://images.unsplash.com/photo-1648765825798-57d76ecd38e3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80');
     background-position: center center;
     background-size: cover;
@@ -19,27 +19,28 @@
     cursor: pointer;
 }
 
-@media screen and (max-width: 768px) {
-    .spotlightSlide {
-        width: 9rem !important;
-        height: 12rem;
-        border-radius: 22px;
-    }
-}
+
 
 .spotlightSlide:first-of-type {
     margin-left: 1rem;
 }
 
 .spotlightSlide:hover {
-    transform: rotateX(-10deg) translateY(-10px);
+    transform-origin: center;
+    transform: rotateX(-7deg) translateY(-2px);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.8);
     margin-right: 1rem;
 }
 
 .spotlightTitle {
-    font-size: 15pt;
+    font-size: 26pt;
     word-wrap: break-word;
+}
+
+@media screen and (max-width: 786px) {
+    .spotlightTitle {
+        font-size: 18pt;
+    }
 }
 
 .spotlightMeta {
@@ -63,11 +64,20 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding: .25rem;
+    border-radius: 3px;
+}
+
+.spotlightAuthor:hover {
+    background-color: #ffffff3c;
 }
 
 .spotlightAuthorImage {
     margin-right: .5em;
     background-color: aliceblue;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: contain;
     border-radius: 100%;
     width: 1em;
     height: 1em;
@@ -77,72 +87,40 @@
     font-size: 14pt;
 }
 
-
-
-.article_card {
-    background-color: var(--vdark_purple);
-    border-radius: 11px;
+.articleCard {
     height: 20rem;
-    width: 90%;
+    width: 15rem;
     display: flex;
     flex-direction: column;
     margin-bottom: 5rem;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    cursor: pointer;
 }
 
-
-.article_card .article_image {
-    background-color: rgb(85, 44, 44);
-    border-radius: 11px 11px 0 0;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-}
-
-.article_card .article_content {
-    padding: 1rem;
-    padding-bottom: 2rem;
-}
-
-.article_card .content_header {
-    width: 100%;
+.articleCardTitle {
     height: fit-content;
-    display: flex;
-    flex-direction: column;
+    margin-bottom: 1rem;
 }
 
-.article_card .meta {
-    font-size: 12pt;
-    color: #B6B6B6;
-}
-
-.article_card .title {
-    color: #FFF1DA;
-    font-size: 23pt;
-    height: fit-content;
-}
-
-.article_card .tags {
+.tags {
     display: flex;
     flex-direction: row;
     width: 100%;
     align-content: center;
 }
 
-.article_card .tag {
-    padding: .1rem 1rem;
+.tag {
+    padding: .1rem .25rem;
+    width: fit-content;
+    height: fit-content;
     color: var(--material_dark);
-    background-color: var(--lightestOrange);
+    background-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
     margin: .5em;
-    border-radius: 33px;
+    border-radius: 3px;
 }
 
-.article_card .tag:first-child {
+.tag:first-child {
     margin-left: 0;
 }
 
@@ -154,4 +132,16 @@
     text-overflow: ellipsis;
     white-space: pre-line;
     font-size: 13pt;
+}
+
+@media screen and (max-width: 768px) {
+    .spotlightSlide {
+        width: 9rem !important;
+        height: 12rem;
+    }
+    .articleCard {
+        width: 13rem !important;
+        height: 15rem;
+        margin: 1rem;
+    }
 }
