--- a/styles/cardStyle.css
+++ b/styles/cardStyle.css
@@ -44,6 +44,7 @@
 }
 
 .spotlightMeta {
+
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -61,6 +62,7 @@
 }
 
 .spotlightAuthor {
+    cursor: pointer;
     display: flex;
     flex-direction: row;
     align-items: center;
