--- a/styles/textStyles.css
+++ b/styles/textStyles.css
@@ -1,5 +1,6 @@
 h1, h2, h3, h4, h5, h6, p, li {
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto Flex', sans-serif;
+    font-optical-sizing: auto;
 }
 
 
@@ -36,8 +37,9 @@ pre div {
 
 a {
     color: white;
-    font-family: "Roboto", sans-serif;
-    font-weight: 300;
+    font-family: 'Roboto Flex', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
 }
 
 a:hover {
