--- a/styles/buttonStyle.css
+++ b/styles/buttonStyle.css
@@ -13,6 +13,9 @@
     justify-content: center;
     align-items: center;
     transition: .25s all;
+    cursor: pointer;
+    font-family: "Roboto Flex", sans-serif;
+    font-weight: 700;
 }
 
 .btn_primary{
@@ -29,6 +32,25 @@
     color: white;
     border : 2px solid white;
 }
+
+
+a {
+    text-decoration: none !important;
+}
+
+.btn_secondary{
+    background-color: transparent ;
+    color: white;
+    transition: all .25s;
+    border: 2px solid white;
+    text-decoration: none;
+}
+
+.btn_secondary:hover {
+    background: white;
+    color: var(--realDark);
+}
+
 
 .disabled {
     background-color: rgba(255, 255, 255, 0.025);
