--- a/styles/textStyles.css
+++ b/styles/textStyles.css
@@ -13,9 +13,17 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 500;
 }
 
+h5, h6 {
+    font-size: 16px;
+    font-family: "Lato", sans-serif;
+}
 
-p, li, a, code, h3 {
+
+p, li, a, h3 {
     font-size: 20px;
+    font-family: "Lato", sans-serif;
+    font-weight: 300;
+    line-height: 1.5;
     color: white;
 }
 
@@ -50,6 +58,14 @@ a:hover {
 #latest_articles > a, #spotlight a {
     color: white !important;
     text-decoration: none !important;
+}
+
+h1, h2, h3 {
+    font-family: "Vollkorn", serif;
+}
+
+h2, h3 {
+    width: 100%;
 }
 
 h3 {
