--- a/styles/blogStyle.css
+++ b/styles/blogStyle.css
@@ -81,7 +81,7 @@ header h1 {
 }
 
 .smallHeader {
-    font-size: 18pt;
+    font-size: 22pt;
     color: var(--lightestOrange);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 100;
@@ -120,6 +120,7 @@ header h1 {
     margin-bottom: 7rem;
     position: relative;
     z-index: 10;
+    margin-top: 10rem;
 }
 
 
@@ -132,8 +133,18 @@ header h1 {
     transform: translateY(-2px);
 }
 
+.featuredMeta p {
+    width: 50%;
+}
+
 .featuredMeta a {
     width: fit-content;
+}
+
+@media screen and (max-width: 320px) {
+    .featuredMeta p {
+        width: 100%;
+    }
 }
 
 #latest, #spotlight {
@@ -192,6 +203,28 @@ header h1 {
 }
 
 
+#latest > div svg {
+    cursor: pointer;
+    transition: color .25s;
+    margin-left: 1rem;
+}
+
+#latest > div svg:hover {
+    color: white;
+}
+
+
+@media screen and (max-width: 320px) {
+    #latest > div {
+        justify-content: flex-start;
+    }
+}
+
+#latest_articles {
+    justify-content: center !important;
+}
+
+
 #latest > div .smallHeader {
     width: fit-content;
 }
@@ -230,4 +263,39 @@ header h1 {
 #articleView img, #userView img {
     width: 100%;
     height: auto;
+}
+
+#search {
+    display: flex;
+}
+
+#search input {
+    transform-origin: 100%;
+    transform: scaleX(0);
+    width: fit-content;
+}
+
+#latest .expand {
+    transform: scaleX(100%);
+}
+
+#searchWrapper {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items:  center;
+}
+
+
+
+@media screen and (max-width: 370px) {
+    #searchWrapper {
+        flex-direction: row;
+    }
+    #searchWrapper svg {
+        margin-left: 0 !important;
+        margin-right: 1rem;
+    }
+    #searchWrapper input {
+        transform-origin: 0%;
+    }
 }
