--- a/styles/textStyles.css
+++ b/styles/textStyles.css
@@ -19,12 +19,32 @@ h5, h6 {
 }
 
 
-p, li, a, h3 {
+p, li, a, h3, span {
     font-size: 20px;
     font-family: "Lato", sans-serif;
     font-weight: 300;
     line-height: 1.5;
     color: white;
+}
+
+blockquote::before {
+    content: "“";
+    color: #dec3ff;
+    position: absolute;
+    font-size: 3em;
+    transform: translateY(-10%) scale(2);
+}
+
+blockquote {
+    margin: 0;
+    padding: .25rem 1rem;
+    border-radius: 3px;
+    background-color: #46464611;
+}
+
+blockquote * {
+    font-style: italic;
+    color: #e9e9e9;
 }
 
 
@@ -40,7 +60,6 @@ pre div {
     border-radius: 3px;
     box-shadow: 0 10px 15px #0000001c;
     cursor: pointer;
-    width: 100%;
 }
 
 
@@ -64,9 +83,6 @@ h1, h2, h3 {
     font-family: "Vollkorn", serif;
 }
 
-h2, h3 {
-    width: 100%;
-}
 
 h3 {
     background-color: #dec3ff;
@@ -85,6 +101,23 @@ h2 {
 h1 {
     background-color: transparent;
     color: white;
+}
+
+input {
+    outline: none;
+    border: solid 2px #121212;
+    background-color: #121212;
+    color: white;
+    font-family: "Roboto Flex", sans-serif;
+    font-size: 14pt;
+    border-radius: 6px;
+    padding: .35rem .5rem;
+    transition: all .25s;
+}
+
+input:focus-visible {
+    outline: none;
+    border: solid 2px var(--lightestOrange);
 }
 
 
