--- a/styles/blogStyle.css
+++ b/styles/blogStyle.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto+Flex:opsz@8..144&family=Rubik+Mono+One&family=Vollkorn&display=swap');
+
+
 :root {
     --light_orange: #F7AB3C;
     --lightestOrange: #F8CD86;
