--- a/styles/blogStyle.css
+++ b/styles/blogStyle.css
@@ -117,7 +117,7 @@ header h1 {
 
 .featuredMeta {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     flex-direction: column;
     height: 50vh;
     margin-bottom: 7rem;
@@ -144,11 +144,53 @@ header h1 {
     width: fit-content;
 }
 
+.featuredMeta__meta {
+    width: fit-content;
+    margin-top: 5rem;
+}
+
+.featuredMeta__meta h1 {
+    width: fit-content;
+    font-size: 20pt;
+    color: white;
+}
+
+.featuredMeta div p {
+    margin: 1rem;
+    margin-left: 0;
+}
+
+@media screen and (max-width: 400px) {
+    .featuredMeta {
+        align-items: center;
+    }
+    .featuredMeta div {
+        margin: 0;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    .featuredMeta div p {
+        margin: 0;
+        width: fit-content;
+        text-align: center;
+    }
+    .featuredMeta__meta {
+        align-items: flex-start !important;
+        margin-top: 5rem !important;
+    }
+    .featuredMeta__meta .spotlightMeta {
+        align-items: flex-start;
+    }
+}
+
 @media screen and (max-width: 320px) {
     .featuredMeta p {
         width: 100%;
     }
 }
+
+
 
 #latest, #spotlight {
     z-index: 2;
