--- a/styles/cardStyle.css
+++ b/styles/cardStyle.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 2rem 1rem 2.5rem;
+    padding: 2rem 1rem;
     width: 30rem !important;
     height: 20rem;
     color: white;
@@ -14,22 +14,19 @@
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    margin-right: 1rem;
     transition: all .5s;
     cursor: pointer;
 }
 
-
-
-.spotlightSlide:first-of-type {
-    margin-left: 1rem;
+#spotlight .spotlightSlide {
+    width: 13rem !important;
 }
+
 
 .spotlightSlide:hover {
     transform-origin: center;
     transform: rotateX(-7deg) translateY(-2px);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.8);
-    margin-right: 1rem;
 }
 
 .spotlightTitle {
@@ -44,7 +41,6 @@
 }
 
 .spotlightMeta {
-
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -87,6 +83,7 @@
 
 .spotlightAuthorName {
     font-size: 14pt;
+    text-decoration: underline;
 }
 
 .articleCard {
@@ -94,7 +91,6 @@
     width: 15rem;
     display: flex;
     flex-direction: column;
-    margin-bottom: 5rem;
 }
 
 .articleCardTitle {
@@ -128,9 +124,9 @@
     margin-left: 0;
 }
 
-.article_card .subtitle {
-    display: -webkit-box;
-    -webkit-line-clamp: 4;
+.subtitle {
+    display: -webkit-box !important;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -138,17 +134,42 @@
     font-size: 13pt;
 }
 
+.metaStuff {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+}
+
 @media screen and (max-width: 768px) {
-    .spotlightSlide {
+    #spotlight .spotlightSlide {
         width: 9rem !important;
         height: 12rem;
     }
     .articleCard {
         width: 13rem !important;
         height: 15rem;
-        margin: 1rem;
     }
     .tag {
         font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 250px) {
+    #spotlight .spotlightSlide {
+        width: 9rem !important;
+        height: 12rem;
+    }
+    .articleCard {
+        width: 9rem !important;
+        height: 11rem;
+    }
+    .articleCard .spotlightTitle {
+        font-size: 18px !important;
+    }
+    .tag {
+        font-size: 12px;
+    }
+    .subtitle {
+        display: none !important;
     }
 }
