--- a/styles/sidenavStyle.css
+++ b/styles/sidenavStyle.css
@@ -46,6 +46,12 @@
     }
 }
 
+@media screen and (max-width: 250px) {
+    .navbar h1 {
+        display: none;
+    }
+}
+
 .sidenav a {
     width: 60%;
 }
