--- a/styles/cardStyle.css
+++ b/styles/cardStyle.css
@@ -141,6 +141,15 @@
     align-items: flex-end;
 }
 
+
+.spinner {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 @media screen and (max-width: 768px) {
     #spotlight .spotlightSlide {
         width: 9rem !important;
