--- a/styles/textStyles.css
+++ b/styles/textStyles.css
@@ -105,8 +105,8 @@ h1 {
 
 input {
     outline: none;
-    border: solid 2px #121212;
-    background-color: #121212;
+    border: solid 2px #13081e;
+    background-color: #13081e;
     color: white;
     font-family: "Roboto Flex", sans-serif;
     font-size: 14pt;
