--- a/styles/blogStyle.css
+++ b/styles/blogStyle.css
@@ -407,9 +407,8 @@ header h1 {
     display: flex;
     flex-direction: row-reverse;
     align-items:  center;
+    flex-wrap: wrap;
 }
-
-
 
 @media screen and (max-width: 370px) {
     #searchWrapper {
