--- a/styles/blogStyle.css
+++ b/styles/blogStyle.css
@@ -408,6 +408,24 @@ header h1 {
     flex-direction: row-reverse;
     align-items:  center;
     flex-wrap: wrap;
+    height: 60px;
+    width: 218px;
+}
+
+#latest #searchWrapper {
+    width: 280px !important;
+}
+
+#latest #searchWrapper input {
+    padding: 1rem .5rem 1rem .5rem !important;
+    background-color: black !important;
+    font-size: 16px !important;
+    border: solid 2px transparent !important;
+}
+
+#searchComp {
+    width: 100%;
+    height: 100%;
 }
 
 @media screen and (max-width: 370px) {
