--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: flex-start;
-    padding: 4rem 10rem;
+    padding: 4rem 3rem;
 }
 
 .footer h1 {
@@ -19,6 +19,7 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    flex-wrap: wrap;
 }
 
 .subLinks {
