--- a/styles/textStyles.css
+++ b/styles/textStyles.css
@@ -154,6 +154,10 @@ input, .searchComp {
     padding: 1rem 0 !important;
 }
 
+.searchButton svg {
+    margin: 0 !important;
+}
+
 #sidebar .react-ripples {
     width: 100%;
 }
