--- a/styles/blogStyle.css
+++ b/styles/blogStyle.css
@@ -287,12 +287,12 @@ header h1 {
     justify-content: center;
     padding-right: 0;
 }
+
 @media screen and (max-width: 768px) {
     #spotlight {
         height: 25rem;
     }
 }
-
 
 #spotlight h2 {
     margin-left: 1rem;
@@ -302,6 +302,10 @@ header h1 {
     width: 100%;
     height: inherit;
     overflow: visible;
+}
+
+#spotlight .smallHeader {
+    padding-left: 5rem;
 }
 
 /* latest */
