--- a/styles/textStyles.css
+++ b/styles/textStyles.css
@@ -31,8 +31,8 @@ blockquote::before {
     content: "“";
     color: #dec3ff;
     position: absolute;
-    font-size: 3em;
-    transform: translateY(-10%) scale(2);
+    font-size: 2em;
+    transform: translateY(-25%) scale(2);
 }
 
 blockquote {
@@ -40,6 +40,7 @@ blockquote {
     padding: .25rem 1rem;
     border-radius: 3px;
     background-color: #46464611;
+    margin-top: 1rem;
 }
 
 blockquote * {
