--- a/styles/imageStyle.module.css
+++ b/styles/imageStyle.module.css
@@ -1,3 +1,12 @@
 .image {
     filter: blur(2px);
+    display: inline-block;
+    mask-image: linear-gradient(0deg, rgba(0, 0, 0, 0.854) 30%, #1e1428 100%);
+    -webkit-mask-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, #ffffff9b 100%);
+    user-select: none;
+}
+
+.profileImage {
+    border-radius: 50%;
+    user-select: none;
 }
