--- a/styles/articleView.module.css
+++ b/styles/articleView.module.css
@@ -42,6 +42,18 @@
     border-radius: 3px;
 }
 
+.edits {
+    width: fit-content;
+    margin: 0;
+}
+
+.edits span {
+    margin: 0;
+    width: fit-content;
+    font-size: 14px;
+    font-family: "Lato", sans-serif;
+    font-weight: 300 !important;
+}
 
 .tags {
     display: flex;
