--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -34,10 +34,17 @@
     margin-right: 0;
 }
 
+.subLinks span {
+    font-family: "Roboto Flex", sans-serif;
+    font-size: 14px;
+    color: rgb(255, 255, 255);
+}
+
 .subLinks a {
     margin-bottom: .5rem;
     font-size: 14px;
-    font-family: "Roboto Flex", sans-serif;
+    font-family: "Lato", sans-serif;
+    color: rgb(233, 233, 233);
 }
 
 .subLinks a:last-child {
